// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`generateColorScheme() > returns the correct values 1`] = `
{
  "contrastColors": [
    {
      "background": "#212011",
    },
    {
      "name": "neutral",
      "values": [
        {
          "contrast": 1,
          "name": "neutral100",
          "value": "#15240a",
        },
        {
          "contrast": 2,
          "name": "neutral200",
          "value": "#425345",
        },
        {
          "contrast": 3,
          "name": "neutral300",
          "value": "#676b57",
        },
        {
          "contrast": 4,
          "name": "neutral400",
          "value": "#857e5c",
        },
        {
          "contrast": 5,
          "name": "neutral500",
          "value": "#83918f",
        },
        {
          "contrast": 6,
          "name": "neutral600",
          "value": "#8a9fab",
        },
        {
          "contrast": 7,
          "name": "neutral700",
          "value": "#9aacb6",
        },
        {
          "contrast": 8,
          "name": "neutral800",
          "value": "#a7b7c0",
        },
        {
          "contrast": 9,
          "name": "neutral900",
          "value": "#b5c2c9",
        },
      ],
    },
    {
      "name": "red",
      "values": [
        {
          "contrast": 1,
          "name": "red100",
          "value": "#232016",
        },
        {
          "contrast": 2,
          "name": "red200",
          "value": "#574f36",
        },
        {
          "contrast": 3,
          "name": "red300",
          "value": "#746948",
        },
        {
          "contrast": 4,
          "name": "red400",
          "value": "#8a7c56",
        },
        {
          "contrast": 5,
          "name": "red500",
          "value": "#9c8d62",
        },
        {
          "contrast": 6,
          "name": "red600",
          "value": "#ac9b6c",
        },
        {
          "contrast": 7,
          "name": "red700",
          "value": "#bba875",
        },
        {
          "contrast": 8,
          "name": "red800",
          "value": "#c5b483",
        },
        {
          "contrast": 9,
          "name": "red900",
          "value": "#c9c09d",
        },
      ],
    },
    {
      "name": "green",
      "values": [
        {
          "contrast": 1,
          "name": "green100",
          "value": "#162310",
        },
        {
          "contrast": 2,
          "name": "green200",
          "value": "#3c5636",
        },
        {
          "contrast": 3,
          "name": "green300",
          "value": "#537056",
        },
        {
          "contrast": 4,
          "name": "green400",
          "value": "#64856f",
        },
        {
          "contrast": 5,
          "name": "green500",
          "value": "#739583",
        },
        {
          "contrast": 6,
          "name": "green600",
          "value": "#80a495",
        },
        {
          "contrast": 7,
          "name": "green700",
          "value": "#8cb2a5",
        },
        {
          "contrast": 8,
          "name": "green800",
          "value": "#9bbcb2",
        },
        {
          "contrast": 9,
          "name": "green900",
          "value": "#aac6bd",
        },
      ],
    },
    {
      "name": "yellow",
      "values": [
        {
          "contrast": 1,
          "name": "yellow100",
          "value": "#222012",
        },
        {
          "contrast": 2,
          "name": "yellow200",
          "value": "#4c522a",
        },
        {
          "contrast": 3,
          "name": "yellow300",
          "value": "#5a7135",
        },
        {
          "contrast": 4,
          "name": "yellow400",
          "value": "#6b8648",
        },
        {
          "contrast": 5,
          "name": "yellow500",
          "value": "#7e9560",
        },
        {
          "contrast": 6,
          "name": "yellow600",
          "value": "#8fa375",
        },
        {
          "contrast": 7,
          "name": "yellow700",
          "value": "#9eaf87",
        },
        {
          "contrast": 8,
          "name": "yellow800",
          "value": "#abba97",
        },
        {
          "contrast": 9,
          "name": "yellow900",
          "value": "#b8c4a7",
        },
      ],
    },
    {
      "name": "blue",
      "values": [
        {
          "contrast": 1,
          "name": "blue100",
          "value": "#39160e",
        },
        {
          "contrast": 2,
          "name": "blue200",
          "value": "#893421",
        },
        {
          "contrast": 3,
          "name": "blue300",
          "value": "#b6442b",
        },
        {
          "contrast": 4,
          "name": "blue400",
          "value": "#c26335",
        },
        {
          "contrast": 5,
          "name": "blue500",
          "value": "#c37e3d",
        },
        {
          "contrast": 6,
          "name": "blue600",
          "value": "#c39443",
        },
        {
          "contrast": 7,
          "name": "blue700",
          "value": "#c9a457",
        },
        {
          "contrast": 8,
          "name": "blue800",
          "value": "#d0b16f",
        },
        {
          "contrast": 9,
          "name": "blue900",
          "value": "#d7bd85",
        },
      ],
    },
    {
      "name": "magenta",
      "values": [
        {
          "contrast": 1,
          "name": "magenta100",
          "value": "#1f2110",
        },
        {
          "contrast": 2,
          "name": "magenta200",
          "value": "#574f2b",
        },
        {
          "contrast": 3,
          "name": "magenta300",
          "value": "#716a47",
        },
        {
          "contrast": 4,
          "name": "magenta400",
          "value": "#847e60",
        },
        {
          "contrast": 5,
          "name": "magenta500",
          "value": "#948e75",
        },
        {
          "contrast": 6,
          "name": "magenta600",
          "value": "#a29c86",
        },
        {
          "contrast": 7,
          "name": "magenta700",
          "value": "#aea996",
        },
        {
          "contrast": 8,
          "name": "magenta800",
          "value": "#b9b5a5",
        },
        {
          "contrast": 9,
          "name": "magenta900",
          "value": "#c4c0b2",
        },
      ],
    },
    {
      "name": "cyan",
      "values": [
        {
          "contrast": 1,
          "name": "cyan100",
          "value": "#192221",
        },
        {
          "contrast": 2,
          "name": "cyan200",
          "value": "#3b5724",
        },
        {
          "contrast": 3,
          "name": "cyan300",
          "value": "#57713d",
        },
        {
          "contrast": 4,
          "name": "cyan400",
          "value": "#6e8558",
        },
        {
          "contrast": 5,
          "name": "cyan500",
          "value": "#81946e",
        },
        {
          "contrast": 6,
          "name": "cyan600",
          "value": "#91a281",
        },
        {
          "contrast": 7,
          "name": "cyan700",
          "value": "#a0ae91",
        },
        {
          "contrast": 8,
          "name": "cyan800",
          "value": "#adb9a0",
        },
        {
          "contrast": 9,
          "name": "cyan900",
          "value": "#b8c3ae",
        },
      ],
    },
  ],
  "terminal": [
    "#1e1d0e",
    "#872111",
    "#2a421e",
    "#85794e",
    "#1c2f0d",
    "#5e552e",
    "#52625d",
    "#c39599",
    "#8299a5",
    "#c2492e",
    "#5f7c39",
    "#c3b07a",
    "#3f5d22",
    "#c39b45",
    "#8eb4a8",
    "#d3d9d0",
  ],
}
`;

exports[`generateColorScheme() > returns the correct values 2`] = `
{
  "contrastColors": [
    {
      "background": "#12130c",
    },
    {
      "name": "neutral",
      "values": [
        {
          "contrast": 1,
          "name": "neutral100",
          "value": "#1b120a",
        },
        {
          "contrast": 2,
          "name": "neutral200",
          "value": "#4f4539",
        },
        {
          "contrast": 3,
          "name": "neutral300",
          "value": "#5e625f",
        },
        {
          "contrast": 4,
          "name": "neutral400",
          "value": "#757569",
        },
        {
          "contrast": 5,
          "name": "neutral500",
          "value": "#878571",
        },
        {
          "contrast": 6,
          "name": "neutral600",
          "value": "#c57f84",
        },
        {
          "contrast": 7,
          "name": "neutral700",
          "value": "#cc8e93",
        },
        {
          "contrast": 8,
          "name": "neutral800",
          "value": "#d29c9f",
        },
        {
          "contrast": 9,
          "name": "neutral900",
          "value": "#d8a8ac",
        },
      ],
    },
    {
      "name": "red",
      "values": [
        {
          "contrast": 1,
          "name": "red100",
          "value": "#12130c",
        },
        {
          "contrast": 2,
          "name": "red200",
          "value": "#454840",
        },
        {
          "contrast": 3,
          "name": "red300",
          "value": "#5e6259",
        },
        {
          "contrast": 4,
          "name": "red400",
          "value": "#71766c",
        },
        {
          "contrast": 5,
          "name": "red500",
          "value": "#81867c",
        },
        {
          "contrast": 6,
          "name": "red600",
          "value": "#8e948a",
        },
        {
          "contrast": 7,
          "name": "red700",
          "value": "#9ba096",
        },
        {
          "contrast": 8,
          "name": "red800",
          "value": "#a5aba1",
        },
        {
          "contrast": 9,
          "name": "red900",
          "value": "#b0b6ac",
        },
      ],
    },
    {
      "name": "green",
      "values": [
        {
          "contrast": 1,
          "name": "green100",
          "value": "#13140c",
        },
        {
          "contrast": 2,
          "name": "green200",
          "value": "#474835",
        },
        {
          "contrast": 3,
          "name": "green300",
          "value": "#61624f",
        },
        {
          "contrast": 4,
          "name": "green400",
          "value": "#747563",
        },
        {
          "contrast": 5,
          "name": "green500",
          "value": "#858575",
        },
        {
          "contrast": 6,
          "name": "green600",
          "value": "#939384",
        },
        {
          "contrast": 7,
          "name": "green700",
          "value": "#9f9f92",
        },
        {
          "contrast": 8,
          "name": "green800",
          "value": "#aaaa9f",
        },
        {
          "contrast": 9,
          "name": "green900",
          "value": "#b4b5aa",
        },
      ],
    },
    {
      "name": "yellow",
      "values": [
        {
          "contrast": 1,
          "name": "yellow100",
          "value": "#240a0d",
        },
        {
          "contrast": 2,
          "name": "yellow200",
          "value": "#83242d",
        },
        {
          "contrast": 3,
          "name": "yellow300",
          "value": "#b1313e",
        },
        {
          "contrast": 4,
          "name": "yellow400",
          "value": "#bd5159",
        },
        {
          "contrast": 5,
          "name": "yellow500",
          "value": "#b47372",
        },
        {
          "contrast": 6,
          "name": "yellow600",
          "value": "#ae8983",
        },
        {
          "contrast": 7,
          "name": "yellow700",
          "value": "#a99c91",
        },
        {
          "contrast": 8,
          "name": "yellow800",
          "value": "#a5ac9d",
        },
        {
          "contrast": 9,
          "name": "yellow900",
          "value": "#a9b8a9",
        },
      ],
    },
    {
      "name": "blue",
      "values": [
        {
          "contrast": 1,
          "name": "blue100",
          "value": "#28080a",
        },
        {
          "contrast": 2,
          "name": "blue200",
          "value": "#881d23",
        },
        {
          "contrast": 3,
          "name": "blue300",
          "value": "#725d43",
        },
        {
          "contrast": 4,
          "name": "blue400",
          "value": "#84715a",
        },
        {
          "contrast": 5,
          "name": "blue500",
          "value": "#92826d",
        },
        {
          "contrast": 6,
          "name": "blue600",
          "value": "#9e907e",
        },
        {
          "contrast": 7,
          "name": "blue700",
          "value": "#a99c8c",
        },
        {
          "contrast": 8,
          "name": "blue800",
          "value": "#b4a89a",
        },
        {
          "contrast": 9,
          "name": "blue900",
          "value": "#bcb2a6",
        },
      ],
    },
    {
      "name": "magenta",
      "values": [
        {
          "contrast": 1,
          "name": "magenta100",
          "value": "#161308",
        },
        {
          "contrast": 2,
          "name": "magenta200",
          "value": "#46483e",
        },
        {
          "contrast": 3,
          "name": "magenta300",
          "value": "#5c625c",
        },
        {
          "contrast": 4,
          "name": "magenta400",
          "value": "#6d7672",
        },
        {
          "contrast": 5,
          "name": "magenta500",
          "value": "#7a8784",
        },
        {
          "contrast": 6,
          "name": "magenta600",
          "value": "#879594",
        },
        {
          "contrast": 7,
          "name": "magenta700",
          "value": "#92a1a1",
        },
        {
          "contrast": 8,
          "name": "magenta800",
          "value": "#9facac",
        },
        {
          "contrast": 9,
          "name": "magenta900",
          "value": "#aab6b6",
        },
      ],
    },
    {
      "name": "cyan",
      "values": [
        {
          "contrast": 1,
          "name": "cyan100",
          "value": "#1c1207",
        },
        {
          "contrast": 2,
          "name": "cyan200",
          "value": "#474834",
        },
        {
          "contrast": 3,
          "name": "cyan300",
          "value": "#616251",
        },
        {
          "contrast": 4,
          "name": "cyan400",
          "value": "#747566",
        },
        {
          "contrast": 5,
          "name": "cyan500",
          "value": "#848578",
        },
        {
          "contrast": 6,
          "name": "cyan600",
          "value": "#929387",
        },
        {
          "contrast": 7,
          "name": "cyan700",
          "value": "#9e9f95",
        },
        {
          "contrast": 8,
          "name": "cyan800",
          "value": "#aaaaa1",
        },
        {
          "contrast": 9,
          "name": "cyan900",
          "value": "#b4b5ac",
        },
      ],
    },
  ],
  "terminal": [
    "#0b0c05",
    "#432d18",
    "#4a4c38",
    "#747562",
    "#2e1e0b",
    "#8e1e25",
    "#5c615e",
    "#c2777c",
    "#8f8b74",
    "#c07942",
    "#a3b4a3",
    "#a6ac74",
    "#2d3935",
    "#c43644",
    "#8f9f9f",
    "#c5ccc1",
  ],
}
`;
